--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -224,7 +224,7 @@
             </h4>
           </div>
           <div class="input-container">
-            <i class="fas fa-user"></i>
+            <img src="../home_page/img/icons/user.svg" alt="" />
             <input class type="email" placeholder="Escreva o seu email" />
             <button>Subscreva</button>
           </div>
@@ -233,9 +233,13 @@
       <div class="second-container">
         <div class="social-container">
           <div id="social-icons">
-            <span><i class="fa-brands fa-square-facebook"></i></span>
-            <span><i class="fa-brands fa-instagram"></i></span>
-            <span><i class="fa-regular fa-envelope"></i></span>
+            <span
+              ><img src="../home_page/img/icons/facebook.svg" alt=""
+            /></span>
+            <span
+              ><img src="../home_page/img/icons/instagram.svg" alt=""
+            /></span>
+            <span><img src="../home_page/img/icons/email.svg" alt="" /></span>
           </div>
           <div class="social-text-container">
             <p>
@@ -249,14 +253,14 @@
           <div class="link-footer">
             <ul>
               <li><a href="../index.html">Home</a></li>
-              <li><a href=".,/treino/treino.html">Planos</a></li>
-              <li><a href=".,/blog/blog.html">Blog</a></li>
+              <li><a href="../treino/treino.html">Planos</a></li>
+              <li><a href="../blog/blog.html">Blog</a></li>
             </ul>
           </div>
           <div class="link-footer">
             <ul>
               <li>
-                <a href="./contacto.html">Contactos</a>
+                <a href="../contacto/contacto.html">Contactos</a>
               </li>
               <li><a href="/">Carreira</a></li>
               <li><a href="/">Novidades</a></li>
@@ -268,9 +272,9 @@
         <div class="copy">
           <p id="order2">© 2024 Shape Up, All rights reserved.</p>
           <ul>
-            <li><a href="/"></a>Termos & Condições</li>
-            <li><a href="/"></a>Política de Privacidade</li>
-            <li><a href="/"></a>Cookies</li>
+            <li><a href="#">Termos & Condições</a></li>
+            <li><a href="/">Política de Privacidade</a></li>
+            <li><a href="/">Cookies</a></li>
           </ul>
         </div>
       </div>
