--- a/treino/treino.html
+++ b/treino/treino.html
@@ -232,38 +232,34 @@
                     </div>
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/PedroAlmeida.png" alt="" />
+                            <img src="img/CarlaSilva.png" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
-                                <h3>Pedro Almeida</h3>
-                                <h6>Personal Trainer</h6>
+                                <h3>Carla Silva</h3>
+                                <h6>Coach de Bem-Estar e Mindfulness</h6>
                                 <p>
-                                    Pedro é personal trainer certificado com
-                                    mais de 10 anos de experiência em treino
-                                    personalizado e otimização de resultados.
-                                    Especializa-se em treinos de força e
-                                    funcionalidade, sempre com foco nas
-                                    necessidades individuais de cada cliente.
+                                    Carla é coach certificada e instrutora de mindfulness, 
+                                    com experiência em ajudar indivíduos a equilibrar corpo e mente. 
+                                    Oferece técnicas de relaxamento, gestão de stress e 
+                                    meditação para otimizar o bem-estar geral dos membros.
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/PedroAlmeida.png" alt="" />
+                            <img src="img/MartaPereira.png" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
-                                <h3>Pedro Almeida</h3>
-                                <h6>Personal Trainer</h6>
+                                <h3>Marta Pereira</h3>
+                                <h6>Instrutora de Musculação e Hipertrofia</h6>
                                 <p>
-                                    Pedro é personal trainer certificado com
-                                    mais de 10 anos de experiência em treino
-                                    personalizado e otimização de resultados.
-                                    Especializa-se em treinos de força e
-                                    funcionalidade, sempre com foco nas
-                                    necessidades individuais de cada cliente.
+                                    Marta é especialista em musculação e hipertrofia, com experiência em 
+                                    treinos de força e ganho de massa muscular. 
+                                    Cria programas personalizados para ajudar os membros a alcançarem os seus 
+                                objetivos de forma eficiente, com foco em técnica e progressão.
                                 </p>
                             </div>
                         </div>
@@ -363,7 +359,7 @@
                             </div>
                         </div>
                     </div>
-            </section> -->
+            </section> 
         </main>
         <!-- Footer -->
         <footer class="footer-container">
