--- a/treino/treino.html
+++ b/treino/treino.html
@@ -347,36 +347,40 @@
                     </theader>
                     <tbody>
                         <tr>
-                            <td>7:00 8:00</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="color">7:00<br />8:00</td>
+                            <td>Yoga</td>
+                            <td>HIIT</td>
+                            <td>Pilates</td>
+                            <td>HIIT</td>
+                            <td>Alongamentos</td>
+                            <td>Yoga</td>
                         </tr>
                         <tr>
-                            <td>9:00 10:0</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="color">9:00 <br />10:0</td>
+                            <td>Circuitos</td>
+                            <td>Zumba</td>
+                            <td>Circuitos</td>
+                            <td>Zumba</td>
+                            <td>Funcional</td>
+                            <td>Powerlifting</td>
                         </tr>
                         <tr>
-                            <td>18:00 19:00</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="color">18:00 <br />19:00</td>
+                            <td>HIIT</td>
+                            <td>Circuitos</td>
+                            <td>Zumba</td>
+                            <td>Circuitos</td>
+                            <td>HITT</td>
+                            <td>Pilates</td>
                         </tr>
                         <tr>
-                            <td>19:00 20:00</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td class="color">19:00 <br />20:00</td>
+                            <td>Powerlifting</td>
+                            <td>Alongamentos</td>
+                            <td>Yoga</td>
+                            <td>Pilates</td>
+                            <td>Powerlifting</td>
+                            <td>Zumba</td>
                         </tr>
                     </tbody>
                 </table>
