--- a/treino/treino.html
+++ b/treino/treino.html
@@ -105,7 +105,7 @@
                         >
                             <div class="accordion-body">
                                 <div class="accordion-img">
-                                    <img src="img/yoga.jpg" alt="ginasio" />
+                                    <img src="img/massagem.png" alt="ginasio" />
                                 </div>
                                 <div class="accordion-text">
                                     <p>
@@ -145,7 +145,7 @@
                             <div class="accordion-body">
                                 <div class="accordion-img">
                                     <img
-                                        src="img/perdaPeso.jpg"
+                                        src="img/perca_peso.png"
                                         alt="ginasio"
                                     />
                                 </div>
@@ -185,7 +185,7 @@
                             <div class="accordion-body">
                                 <div class="accordion-img">
                                     <img
-                                        src="img/MassaMuscular.jpg"
+                                        src="img/ganho_massa.png"
                                         alt="ginasio"
                                     />
                                 </div>
