finished my web page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </li>
                     </ul>
                     <div class="button">
-                        <a href="/"
+                        <a href="#"
                             ><button id="start-session">
                                 Iniciar sessão
                             </button></a
@@ -455,8 +455,8 @@
                             <li>
                                 <a href="./contacto/contacto.html">Contactos</a>
                             </li>
-                            <li><a href="/">Carreira</a></li>
-                            <li><a href="/">Novidades</a></li>
+                            <li><a href="#">Carreira</a></li>
+                            <li><a href="#">Novidades</a></li>
                         </ul>
                     </div>
                 </div>
@@ -466,8 +466,8 @@
                     <p id="order2">© 2024 Shape Up, All rights reserved.</p>
                     <ul>
                         <li><a href="#">Termos & Condições</a></li>
-                        <li><a href="/">Política de Privacidade</a></li>
-                        <li><a href="/">Cookies</a></li>
+                        <li><a href="#">Política de Privacidade</a></li>
+                        <li><a href="#">Cookies</a></li>
                     </ul>
                 </div>
             </div>
