--- a/treino/treino.html
+++ b/treino/treino.html
@@ -336,7 +336,7 @@
             <!-- Section table -->
             <section class="table-container">
                 <table class="table-horarios">
-                    <theader>
+                    <thead>
                         <th>Rotina</th>
                         <th>Segunda</th>
                         <th>Terça</th>
@@ -344,10 +344,10 @@
                         <th>Quinta</th>
                         <th>Sexta</th>
                         <th>Sabado</th>
-                    </theader>
+                    </thead>
                     <tbody>
                         <tr>
-                            <td class="color">7:00<br />8:00</td>
+                            <td class="color">7:00 <br />8:00</td>
                             <td>Yoga</td>
                             <td>HIIT</td>
                             <td>Pilates</td>
