--- a/treino/treino.html
+++ b/treino/treino.html
@@ -251,7 +251,7 @@
                     </div>
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/MartaPereira.png" alt="" />
+                            <img src="img/MartaPereira.j" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
@@ -277,15 +277,12 @@
                         </div>
                         <div>
                             <div class="text-card-container">
-                                <h3>Pedro Almeida</h3>
+                                <h3>Ana Oliveira</h3>
                                 <h6>Personal Trainer</h6>
                                 <p>
-                                    Pedro é personal trainer certificado com
-                                    mais de 10 anos de experiência em treino
-                                    personalizado e otimização de resultados.
-                                    Especializa-se em treinos de força e
-                                    funcionalidade, sempre com foco nas
-                                    necessidades individuais de cada cliente.
+                                    Especialista em treinos personalizados que ajudam os alunos a atingir suas 
+                                    metas com eficiência e segurança. Seu entusiasmo e abordagem 
+                                    prática tornam cada sessão transformadora, seja para emagrecimento, ganho de força ou bem-estar geral.
                                 </p>
                             </div>
                         </div>
@@ -296,15 +293,12 @@
                         </div>
                         <div>
                             <div class="text-card-container">
-                                <h3>Pedro Almeida</h3>
-                                <h6>Personal Trainer</h6>
+                                <h3>Beatriz Costa</h3>
+                                <h6>Nutricionista</h6>
                                 <p>
-                                    Pedro é personal trainer certificado com
-                                    mais de 10 anos de experiência em treino
-                                    personalizado e otimização de resultados.
-                                    Especializa-se em treinos de força e
-                                    funcionalidade, sempre com foco nas
-                                    necessidades individuais de cada cliente.
+                                    Apaixonada por promover uma alimentação saudável e equilibrada. Desenvolvendo planos nutricionais que alinham suas necessidades com um estilo de 
+                                    vida prático e saudável. Seu compromisso é orientar 
+                                    escolhas alimentares que garantam resultados.
                                 </p>
                             </div>
                         </div>
@@ -315,15 +309,13 @@
                         </div>
                         <div>
                             <div class="text-card-container">
-                                <h3>Pedro Almeida</h3>
-                                <h6>Personal Trainer</h6>
+                                <h3>Rafael Almeida</h3>
+                                <h6>Instrutor de Pilates e Yoga</h6>
                                 <p>
-                                    Pedro é personal trainer certificado com
-                                    mais de 10 anos de experiência em treino
-                                    personalizado e otimização de resultados.
-                                    Especializa-se em treinos de força e
-                                    funcionalidade, sempre com foco nas
-                                    necessidades individuais de cada cliente.
+                                    Com formação avançada em Pilates e Yoga. Ele ajuda seus alunos a 
+                                    fortalecerem o corpo, reduzirem o estresse e encontrarem equilíbrio. 
+                                    Suas aulas são ideais para quem busca transformar não apenas o físico, 
+                                    mas também a mente.
                                 </p>
                             </div>
                         </div>
