--- a/treino/treino.html
+++ b/treino/treino.html
@@ -335,7 +335,7 @@
                         <th>Quarta</th>
                         <th>Quinta</th>
                         <th>Sexta</th>
-                        <th>Sabado</th>
+                        <th>Sábado</th>
                     </thead>
                     <tbody>
                         <tr>
@@ -348,7 +348,7 @@
                             <td>Yoga</td>
                         </tr>
                         <tr>
-                            <td class="color">9:00 <br />10:0</td>
+                            <td class="color">9:00 <br />10:00</td>
                             <td>Circuitos</td>
                             <td>Zumba</td>
                             <td>Circuitos</td>
