--- a/treino/treino.html
+++ b/treino/treino.html
@@ -329,17 +329,19 @@
             <section class="table-container">
                 <table class="table-horarios">
                     <thead>
-                        <th>Rotina</th>
-                        <th>Segunda</th>
-                        <th>Terça</th>
-                        <th>Quarta</th>
-                        <th>Quinta</th>
-                        <th>Sexta</th>
-                        <th>Sábado</th>
+                        <tr>
+                            <th>Rotina</th>
+                            <th>Segunda</th>
+                            <th>Terça</th>
+                            <th>Quarta</th>
+                            <th>Quinta</th>
+                            <th>Sexta</th>
+                            <th>Sábado</th>
+                        </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="color">7:00 <br />8:00</td>
+                            <th class="color">7:00 <br />8:00</th>
                             <td>Yoga</td>
                             <td>HIIT</td>
                             <td>Pilates</td>
@@ -348,7 +350,7 @@
                             <td>Yoga</td>
                         </tr>
                         <tr>
-                            <td class="color">9:00 <br />10:00</td>
+                            <th class="color">9:00 <br />10:00</th>
                             <td>Circuitos</td>
                             <td>Zumba</td>
                             <td>Circuitos</td>
@@ -357,7 +359,7 @@
                             <td>Powerlifting</td>
                         </tr>
                         <tr>
-                            <td class="color">18:00 <br />19:00</td>
+                            <th class="color">18:00 <br />19:00</th>
                             <td>HIIT</td>
                             <td>Circuitos</td>
                             <td>Zumba</td>
@@ -366,7 +368,7 @@
                             <td>Pilates</td>
                         </tr>
                         <tr>
-                            <td class="color">19:00 <br />20:00</td>
+                            <th class="color">19:00 <br />20:00</th>
                             <td>Powerlifting</td>
                             <td>Alongamentos</td>
                             <td>Yoga</td>
