--- a/treino/treino.html
+++ b/treino/treino.html
@@ -325,7 +325,7 @@
             <section class="title">
                 <h3>Tabela de horários</h3>
             </section>
-            <!-- Section table -->
+            <!-- Section table container-->
             <section class="table-container">
                 <table class="table-horarios">
                     <thead>
