--- a/treino/treino.html
+++ b/treino/treino.html
@@ -326,7 +326,7 @@
                 <h3>Tabela de horários</h3>
             </section>
             <!-- Section table container-->
-            <section class="table-container">
+            <div class="table-container">
                 <table class="table-horarios">
                     <thead>
                         <tr>
@@ -378,7 +378,7 @@
                         </tr>
                     </tbody>
                 </table>
-            </section>
+            </div>
         </main>
         <!-- Footer -->
         <footer class="footer-container">
