--- a/treino/treino.html
+++ b/treino/treino.html
@@ -37,6 +37,24 @@
             type="image/x-icon"
         />
         <title>Planos</title>
+        <style>
+            table {
+                border-collapse: collapse;
+                border-spacing: 0;
+                width: 100%;
+                border: 1px solid #ddd;
+            }
+
+            th,
+            td {
+                text-align: left;
+                padding: 8px;
+            }
+
+            tr:nth-child(even) {
+                background-color: #f2f2f2;
+            }
+        </style>
     </head>
     <body>
         <!-- Nav -->
@@ -280,9 +298,12 @@
                                 <h3>Ana Oliveira</h3>
                                 <h6>Personal Trainer</h6>
                                 <p>
-                                    Especialista em treinos personalizados que ajudam os alunos a atingir suas 
-                                    metas com eficiência e segurança. Seu entusiasmo e abordagem 
-                                    prática tornam cada sessão transformadora, seja para emagrecimento, ganho de força ou bem-estar geral.
+                                    Especialista em treinos personalizados que
+                                    ajudam os alunos a atingir suas metas com
+                                    eficiência e segurança. Seu entusiasmo e
+                                    abordagem prática tornam cada sessão
+                                    transformadora, seja para emagrecimento,
+                                    ganho de força ou bem-estar geral.
                                 </p>
                             </div>
                         </div>
@@ -296,9 +317,12 @@
                                 <h3>Beatriz Costa</h3>
                                 <h6>Nutricionista</h6>
                                 <p>
-                                    Apaixonada por promover uma alimentação saudável e equilibrada. Desenvolvendo planos nutricionais que alinham suas necessidades com um estilo de 
-                                    vida prático e saudável. Seu compromisso é orientar 
-                                    escolhas alimentares que garantam resultados.
+                                    Apaixonada por promover uma alimentação
+                                    saudável e equilibrada. Desenvolvendo planos
+                                    nutricionais que alinham suas necessidades
+                                    com um estilo de vida prático e saudável.
+                                    Seu compromisso é orientar escolhas
+                                    alimentares que garantam resultados.
                                 </p>
                             </div>
                         </div>
@@ -312,10 +336,12 @@
                                 <h3>Rafael Almeida</h3>
                                 <h6>Instrutor de Pilates e Yoga</h6>
                                 <p>
-                                    Com formação avançada em Pilates e Yoga. Ele ajuda seus alunos a 
-                                    fortalecerem o corpo, reduzirem o estresse e encontrarem equilíbrio. 
-                                    Suas aulas são ideais para quem busca transformar não apenas o físico, 
-                                    mas também a mente.
+                                    Com formação avançada em Pilates e Yoga. Ele
+                                    ajuda seus alunos a fortalecerem o corpo,
+                                    reduzirem o estresse e encontrarem
+                                    equilíbrio. Suas aulas são ideais para quem
+                                    busca transformar não apenas o físico, mas
+                                    também a mente.
                                 </p>
                             </div>
                         </div>
@@ -325,6 +351,66 @@
             <section class="title">
                 <h3>Tabela de horários</h3>
             </section>
+            <div style="overflow-x: auto">
+                <table>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                        <th>Points</th>
+                    </tr>
+                    <tr>
+                        <td>Jill</td>
+                        <td>Smith</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                        <td>50</td>
+                    </tr>
+                    <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                        <td>94</td>
+                    </tr>
+                    <tr>
+                        <td>Adam</td>
+                        <td>Johnson</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                        <td>67</td>
+                    </tr>
+                </table>
+            </div>
             <!-- Section table container-->
             <div class="table-container">
                 <table class="table-horarios">
