finished web page treino

--- a/treino/treino.html
+++ b/treino/treino.html
@@ -251,7 +251,7 @@
                     </div>
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/MartaPereira.j" alt="" />
+                            <img src="img/personal01.png" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
@@ -273,7 +273,7 @@
                 <div class="second-section-container">
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/PedroAlmeida.png" alt="" />
+                            <img src="img/personal02.png" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
@@ -292,7 +292,7 @@
                     </div>
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/PedroAlmeida.png" alt="" />
+                            <img src="img/nutri01.png" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
@@ -311,7 +311,7 @@
                     </div>
                     <div class="instrutor-card">
                         <div class="img-container-instructor">
-                            <img src="img/PedroAlmeida.png" alt="" />
+                            <img src="img/instrutor_yoga.png" alt="" />
                         </div>
                         <div>
                             <div class="text-card-container">
