fiz buttom final banner

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </section>
                 <section class="banner-container">
                         <h3>Junta-te a nós no próximo dia 24 de Janeiro para um desafio cycling.</h3>
-                        <button id="btn-banner">Inscreve-te aqui</button>
+                        <button id="btn-banner">Inscreva-se aqui</button>
                 </section>
                 <!-- Section text -->
                 <section class="title">
