fix price cards

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                         </button>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
-                            <p>Consultoria nutricional personalizada</p>
+                            <p>Consultoria nutricional personalizada;</p>
                         </div>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
@@ -375,19 +375,19 @@
                         </button>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
-                            <p>Treino de Força Personalizado:</p>
+                            <p>Treino de Força Personalizado;</p>
                         </div>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
-                            <p>Consultoria nutricional para Hipertrofia:</p>
+                            <p>Consultoria nutricional para Hipertrofia;</p>
                         </div>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
-                            <p>Levantamento olímpico ou powerlifting.</p>
+                            <p>Levantamento olímpico ou powerlifting;</p>
                         </div>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
-                            <p>Demonstração e correção de técnica de exercícios compostos </p>
+                            <p>Demonstração e correção de técnica de exercícios compostos;</p>
                         </div>
                         <div class="iconText">
                             <span><i class="fa-regular fa-circle-check"></i></i></span>
