update for animation

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             href="./home_page/img/favicon.png"
             type="image/x-icon"
         />
+        <!-- scrollreveal -->
+        <script src="https://unpkg.com/scrollreveal"></script>
         <title>Homepage</title>
     </head>
     <body>
@@ -76,7 +78,7 @@
         <main>
             <section class="main-container">
                 <!-- Section title text -->
-                <section class="title-container">
+                <section class="title-container efeito-scrollReveal">
                     <h1>Mais do que treino, é um estilo de vida.</h1>
                 </section>
                 <!-- Section numbers -->
@@ -293,9 +295,9 @@
                         </div>
                     </div>
                 </section>
-                <section class="banner-container">
-                        <h3>Junta-te a nós no próximo dia 24 de Janeiro para um desafio cycling.</h3>
-                        <button id="btn-banner">Inscreva-se aqui</button>
+                <section class="banner-container ">
+                        <h3 class="efeito-scrollReveal">Junta-te a nós no próximo dia 24 de Janeiro para um desafio cycling.</h3>
+                        <button id="btn-banner" class="efeito-scrollReveal">Inscreva-se aqui</button>
                 </section>
                 <!-- Section text -->
                 <section class="title">
@@ -303,7 +305,7 @@
                 </section>
                 <!-- Section price -->
                 <section class="price-container">
-                    <div id="price-basic" class="price-card">
+                    <div id="price-basic" class="price-card efeito-scrollReveal1">
                         <h4>
                             Bem-estar e Saúde 
                         </h4>
@@ -333,7 +335,7 @@
                             <p>Acompanhamento Holístico que combina nutrição, treino leve e práticas para relaxamento;</p>
                         </div>
                     </div>
-                    <div id="price-basic-two" class="price-card">
+                    <div id="price-basic-two" class="price-card efeito-scrollReveal2">
                         <h4>
                             Perda de Peso
                         </h4>
@@ -364,7 +366,7 @@
                             <p>Workshops de Estilo de Vida Saudável;</p>
                         </div>
                     </div>
-                    <div id="price-basic-tree" class="price-card">
+                    <div id="price-basic-tree" class="price-card efeito-scrollReveal3">
                         <h4>
                             Ganho de Massa Muscular
                         </h4>
@@ -398,8 +400,8 @@
             </section>
             <section class="final-banner">
                 <div class="final-banner-container">
-                    <h3>O sucesso é a soma de pequenos esforços repetidos dia após dia.</h3>
-                    <p>Robert Collier</p>
+                    <h3 class="efeito-scrollReveal">O sucesso é a soma de pequenos esforços repetidos dia após dia.</h3>
+                    <p class="efeito-scrollReveal">Robert Collier</p>
                 </div>
             </section>
         </main>
